--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,10 @@ edition = "2018"
 anyhow = "1.0.31"
 clap = "3.0.0-beta.2"
 clap_generate = "3.0.0-beta.2"
+log = "0.4.14"
+itertools = "0.10.0"
+str-distance = "0.1.0"
 
 [[bin]]
-name = "kbl"
+name = "rbl"
 path = "src/main.rs"
