--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ clap_generate = "3.0.0-beta.2"
 log = "0.4.14"
 itertools = "0.10.0"
 str-distance = "0.1.0"
+regex = "1.3.5"
 
 [[bin]]
 name = "rbl"
