--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.31"
-clap = "3.0.0-beta.2"
+clap = { version = "3.0.0-beta.2", features = ["yaml"] }
 clap_generate = "3.0.0-beta.2"
 log = "0.4.14"
 itertools = "0.10.0"
